# FloppyControl

./: README.md
ArduinoDueVersion/: BOM.xlsx  DUElib130425.lbr
ArduinoDueVersion/CaptureTimer/: Arduino Timer Interrupts.URL  Arduino Timer Interrupts.htm  DUE Timer Capture Mode (TC0, channel 1).htm  GitHub - SMFSWCaptureTimer Arduino Input Capture library.URL  GitHub - antodomtc_lib This is a library to take advantage of different functionalities available on Timer Counter (TC) modu.URL  KO7M - Ham Radio Blog  Arduino Due Timers (Part 1).htm  KO7M - Ham Radio Blog Arduino Due Timers (Part 1).URL  Timer Interrupts on Due.URL  Timer Interrupts on Due.htm
ArduinoDueVersion/CaptureTimer/Arduino Timer Interrupts_files/: ale.php  custom-styles.css  desktop_style.css  front_end_script.js  jscripts.php  kQl0JuyeRzU.htm  kQl0JuyeRzU_002.htm  ps_style.css  rp_style.css  style.css  style_002.css  suffusion.js
ArduinoDueVersion/CaptureTimer/DUE Timer Capture Mode (TC0, channel 1)_files/: banner.js  header.css  index.css  jquery.css  jquery_003.js  jquery_004.js  js  notice  privacy-modal.css  script.js
ArduinoDueVersion/CaptureTimer/KO7M - Ham Radio Blog  Arduino Due Timers (Part 1)_files/: plusone.js
ArduinoDueVersion/CaptureTimer/Timer Interrupts on Due_files/: arduino-icons.css  common-hacked.css  loader.js  new_style.css  newsletter-modal.css  notice  notice_002
ArduinoDueVersion/CaptureTimer/tc_lib-master/: CMakeLists.txt  README.md  library.properties  tc_lib.h  tc_lib_license_header.txt
ArduinoDueVersion/CaptureTimer/tc_lib-master/cmake/: arduino_due_toolchain.cmake  build_library.cmake
ArduinoDueVersion/CaptureTimer/tc_lib-master/examples/action_test/: action_test.ino
ArduinoDueVersion/CaptureTimer/tc_lib-master/examples/capture_test/: tc_lib.h
ArduinoDueVersion/CaptureTimer/tc_lib-master/examples/pwm_capture_test/: pwm_capture_test.ino
ArduinoDueVersion/CaptureTimer/tc_lib-master/examples/wave_example/: wave_example.ino
ArduinoDueVersion/FloppyControlFirmwareArduinoDue/: FloppyControlFirmwareArduinoDue.ino  capture_test.ino  tc_lib.h
ArduinoDueVersion/FloppyControlFirmwareArduinoDuePrototype1/: FloppyControlFirmwareArduinoDue.ino
ArduinoDueVersion/InterruptOnChange/: Arduino Due External Interrupts.URL  Arduino Due External Interrupts.htm
CleaningKit/: Bracket.stl  FloppyCleaningSet.stl  TurnTool2.stl
Docs/: 16f1938.html - Shortcut.lnk  775813.fxsnapshot  8 _ Floppy Disk Controller _ Disk Subsystem Timing.htm  ADFlib_adf_info_V0_9.txt at master · lclevy_ADFlib · GitHub.htm  AmigaFFS.txt  Appendix C _ MFM Track Encoding.htm  Ascii85 Decode - Base85 Decoder - Online - Browserling Web Developer Tools.htm  BaudrateCalc.xlsx  CRC16CCITT.txt  DiskSpareDiskFormat.txt  ErrorCorrectionAnalysisData.txt  FFS (Amiga) - OSDev Wiki.htm  FloppyControl firmware commands.docx  PCDOSHeaderInfo.txt  SCPFileFormat.txt  StepStickPinout.psd  disk.cpp  disk.cpp in WinUAE _ source code search engine.htm  openMSX _ Mailing Lists.htm  pic16f1938.h - Shortcut.lnk  rll-encoding.txt
Docs/ADFlib_adf_info_V0_9.txt at master · lclevy_ADFlib · GitHub_files/: frameworks-ef8eb4a89ee9f3c8b7613307fe589a8f5705817f7cee27bec5.js  github-16bf5399d85a6f926eb6af8f983ed5cf907e97b4da4a650dc1192.css  github-4b6b8e7d11ebb7bce85126d3b4130c80041f2ae6d5d6ef8901a8c0.js  github2-451ab63ad67fa9af580e5d9a3b2b7de911ce2e4b2437638f26fe.css
Docs/Ascii85 Decode - Base85 Decoder - Online - Browserling Web Developer Tools_files/: a.js  ascii85.js  channel.htm  css_002.css  footer.js  iPrOY23SGAp.htm  like.htm  reset.css  sdk.js  sign-in-new.js  style-base-template.css  style-browser-window.css  style-footer-new.css  style-menu-new.css  style-tools.css  tools.js
Docs/DownloadedDocs/: AmigaMail_Vol2.tgz  Devices_Manual.tgz  Hardware_Manual.tgz  Includes_and_Autodocs_2.0.tgz  Includes_and_Autodocs_3.5.tgz  Libraries_Manual.tgz
Docs/FFS (Amiga) - OSDev Wiki_files/: load.css  load.php  load_002.php  load_003.php
Docs/MFMRecoveryStrategies/: DataRecovery.ppt
Docs/PIC24/: p24F04KA201.h - Shortcut.lnk
Docs/XDF/: EL CONTROLADOR DE DISQUETES NEC 765.htm  The XDF Diskette Format _ OS_2 Museum.htm
Docs/disk.cpp in WinUAE _ source code search engine_files/: carbon.js  monetization.js  script.js  style.css
Docs/openMSX _ Mailing Lists_files/: a_002.htm  a_003.htm  conversion.js  css_002.css  css_003.css  forge.css  get  gpt.js  js_002  modernizr.js  notice  pubads_impl_78.js
FloppyControlApp.net7/NI/: NationalInstruments.Common.xml
FloppyControlApp.net7/WindowsFormsApplication2/: .editorconfig  FloppyControlAppSolution.sln
FloppyControlApp/NI/: NationalInstruments.VisaNS.xml
FloppyControlApp/WindowsFormsApplication2/: .editorconfig  FloppyControlAppSolution.sln
GettingStarted/: GettingStarted.docx
PICversion/Eagle/: EagelNotes.txt
(+238 files in other folders)
